--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,9 @@ knitr::opts_chunk$set(
 
 The goal of escalc is to provide a home for various functions to convert effect sizes.
 
+[![Travis build status](https://travis-ci.org/wviechtb/transformer.svg?branch=master)](https://travis-ci.org/wviechtb/transformer)
+
+
 ## Code of conduct
 
 Please note that the 'transformer' project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
